--- a/index.html
+++ b/index.html
@@ -2,27 +2,32 @@
 <html>
 
 <head>
-	<title>Cayley Riehl Bio</title>
+	<title>Evica Mai Bio</title>
 </head>
 
 <body>
 
-<h1>A little bit about me</h1>
-<p>Hi! My name is Cayley. I'm 23 years old and I live in London, ON. I just moved to London last month from Windsor, ON. I was a student at the University of Windsor in Communication, Media & Film. I chose to pursue this program at Fanshawe to round out my skill set, and because I wanted to combine my creativity with computer science.</p>	
+<h1>Lil' Introduction</h1>
+<p>Hello! My name is Evica Mai and I am nineteen years old. I have live "the City of FLowers" (GuangZhou, China). Since middle school, I fell in love with game playthroughs and game graphics, which introduced me to a program in Fanshawe College involving web development. I hope the skill set and knowledge I earn from the experience will expand the basic foundation I have from a general computer science high school course. To be honest, I hope the experience will help me familiarize myself with digital approaches, as opposed to the usual traditional methods, such as pen and paper.</p>	
 
-<h2>Some photos!</h2>
-<p>I don't take pictures of myself very often, so here are some (I think) pretty photos I took while I was in Edmonton last month.</p>
 
-<h3>A pretty sunset</h3>
-<img src="images/sunset_trees_edmonton" alt="sunset_trees_edmonton">
+<h2>Photo Gallery</h2>
+<p>As the saying goes, "A picture is worth a thousand words." So, here are a few pictures that will help you know more about me. I do not have any recent pictures of myself since I barely go outside, even more so due to the global 'incident'.</p>
 
-<h3>A mossy log and a little fungi</h3>
-<img src="images/moss_shroom_edmonton" alt="moss_shroom_edmonton">
+<img src="images/chinese_new_years" alt="chinese_new_years">
 
-<h3>Reflection on the water</h3>
-<img src="images/water_reflection_edmonton" alt="water_reflection_edmonton">
+<h3>Chinese New Years!</h3>
+<p>This picture was taken around Chinese New Years of the year 2020, before the chaos ensued. I took a selfie with my mother as seen above (I am on the right side in case you think I was swept away by the crowd). I have a love and hate relationship with these kinds of scenes, where the place is packed with people, like sardines in a can. I dislike crowds since it made me feel suffocated, especially with my small stature. I love huge crowds since they make the special events feel truly festive to celebrate and be happy together, as well as wish each other (stranger or not) fortune and good health. Now, this makes me miss these moments and appreciate the freedom we had before empty places became the norm for a period of time.</p> 
 
-<p>I love being in nature, so these pictures are really special to me. I made my friend hike down bluffs and we scraped our knees - just cause I wanted to see a beaver dam up close, or grab a couple cool rocks. It was worth it.</p>
+<img src="images/cupcake" alt="cupcake">
+
+<h3>Cupcake?</h3>
+<p>I recently went to a restaurant called "Small Shell" (literal translation) and their food is always top-notch, as well as their cutsomer service. I tasted a dish, which I am not sure is considered a 'cupcake,' but the cupcake displayed above is sweet with a tint of saltiness and sprinkled with sunflower seeds. If you think the dish is odd, that's alright. Once you taste the combo of fluff and crunch, I guarantee you will change your mind. Seeing the picture is instantly reminding me of the heavenly smell and taste.</p>
+
+<img src="images/chicken" alt="chicken">
+
+<h3>Boo! Pretty Chicken</h3>
+<p>I love zoos, but my stamina could not handle the walking required since the zoos are huge in GuangZhou. The one I visited for the picture above was so huge I could not bother touring the entire place. Instead, I took a shortcut to the exit. Before leaving, there were a few last displays ranging from parrots to peacocks. One of these displays contained the little colourful guy displayed above. I forgot what type of species he is, but he looks like a combination between a grouse and a peacock. I was about to take a picture and he popped by at the right time!</p>
 
 </body>
 </html>
